{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 526,
  "lineage": "5a641d4b-5437-28e7-4783-e8572bcb97cc",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112857175:loadbalancer/app/haidang-my-alb/d7b21cead6ed6985",
            "arn_suffix": "app/haidang-my-alb/d7b21cead6ed6985",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "haidang-my-alb-1778311307.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112857175:loadbalancer/app/haidang-my-alb/d7b21cead6ed6985",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "haidang-my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ad5d5ca8938b5c0c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a322b91a94902c28"
              },
              {
                "subnet_id": "subnet-0b93fcec9c89b3310"
              }
            ],
            "subnets": [
              "subnet-0a322b91a94902c28",
              "subnet-0b93fcec9c89b3310"
            ],
            "tags": {
              "Name": "haidang-my-alb"
            },
            "tags_all": {
              "Name": "haidang-my-alb"
            },
            "vpc_id": "vpc-0a5056cfc67050ddd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_security_group.alb_security_group",
            "module.vpc.aws_subnet.pub_sub_az1",
            "module.vpc.aws_subnet.pub_sub_az2",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "my_alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112857175:listener/app/haidang-my-alb/d7b21cead6ed6985/0b4141c6771156c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112857175:targetgroup/haidang-tg/187835e2ee35aeb9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112857175:listener/app/haidang-my-alb/d7b21cead6ed6985/0b4141c6771156c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112857175:loadbalancer/app/haidang-my-alb/d7b21cead6ed6985",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.my_alb",
            "module.alb.aws_alb_target_group.my_alb_tg",
            "module.ec2.aws_security_group.alb_security_group",
            "module.vpc.aws_subnet.pub_sub_az1",
            "module.vpc.aws_subnet.pub_sub_az2",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "my_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112857175:targetgroup/haidang-tg/187835e2ee35aeb9",
            "arn_suffix": "targetgroup/haidang-tg/187835e2ee35aeb9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112857175:targetgroup/haidang-tg/187835e2ee35aeb9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112857175:loadbalancer/app/haidang-my-alb/d7b21cead6ed6985"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "haidang-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112857175:targetgroup/haidang-tg/187835e2ee35aeb9-20240824222151339300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112857175:targetgroup/haidang-tg/187835e2ee35aeb9",
            "target_id": "i-04cf377646f0a0cba"
          },
          "dependencies": [
            "module.alb.aws_alb_target_group.my_alb_tg",
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.http.my_ip",
            "module.ec2.aws_instance.wp_1",
            "module.ec2.aws_security_group.alb_security_group",
            "module.ec2.aws_security_group.ec2ice",
            "module.ec2.aws_security_group.wp-sg",
            "module.ec2.data.aws_ami.wp",
            "module.vpc.aws_subnet.pri_sub_az1",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112857175:targetgroup/haidang-tg/187835e2ee35aeb9-20240824222141721200000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112857175:targetgroup/haidang-tg/187835e2ee35aeb9",
            "target_id": "i-0aee8d1cb8b3d93a6"
          },
          "dependencies": [
            "module.alb.aws_alb_target_group.my_alb_tg",
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.http.my_ip",
            "module.ec2.aws_instance.wp_2",
            "module.ec2.aws_security_group.alb_security_group",
            "module.ec2.aws_security_group.ec2ice",
            "module.ec2.aws_security_group.wp-sg",
            "module.ec2.data.aws_ami.wp",
            "module.vpc.aws_subnet.pri_sub_az2",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-075d39ebbca89ed55",
            "arn": "arn:aws:ec2:us-east-1:471112857175:instance/i-0e315a7d4193eeddc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e315a7d4193eeddc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tgw",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e33398f6040af03d",
            "private_dns": "ip-10-0-0-129.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.129",
            "public_dns": "ec2-100-24-18-105.compute-1.amazonaws.com",
            "public_ip": "100.24.18.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08fca0adca8769e93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a322b91a94902c28",
            "tags": {
              "Name": "haidang-basion-host"
            },
            "tags_all": {
              "Name": "haidang-basion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0187bb578c4267113"
            ]
          },
          "dependencies": [
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.aws_ami.amazon_linux_2",
            "module.asg.data.http.my_ip",
            "module.vpc.aws_subnet.pub_sub_az1",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:security-group/sg-0187bb578c4267113",
            "description": "bastion-host",
            "egress": [],
            "id": "sg-0187bb578c4267113",
            "ingress": [
              {
                "cidr_blocks": [
                  "58.187.59.186/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_bastion",
            "name_prefix": "",
            "owner_id": "471112857175",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.data.http.my_ip",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bd2c919eb6e9c1b",
            "arn": "arn:aws:ec2:us-east-1:471112857175:instance/i-04cf377646f0a0cba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cf377646f0a0cba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tgw",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-087408c7d22fb571b",
            "private_dns": "ip-10-0-3-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08168834dc6a70f08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ed0d48ff8864eb4",
            "tags": {
              "Name": "wordpress_1"
            },
            "tags_all": {
              "Name": "wordpress_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0707a257efa273803"
            ]
          },
          "dependencies": [
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.http.my_ip",
            "module.ec2.aws_security_group.alb_security_group",
            "module.ec2.aws_security_group.ec2ice",
            "module.ec2.aws_security_group.wp-sg",
            "module.ec2.data.aws_ami.wp",
            "module.vpc.aws_subnet.pri_sub_az1",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bd2c919eb6e9c1b",
            "arn": "arn:aws:ec2:us-east-1:471112857175:instance/i-0aee8d1cb8b3d93a6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aee8d1cb8b3d93a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tgw",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c976b80419484876",
            "private_dns": "ip-10-0-4-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5a8a51966e4b465",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059e3af006f9c60ac",
            "tags": {
              "Name": "wordpress_2"
            },
            "tags_all": {
              "Name": "wordpress_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0707a257efa273803"
            ]
          },
          "dependencies": [
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.http.my_ip",
            "module.ec2.aws_security_group.alb_security_group",
            "module.ec2.aws_security_group.ec2ice",
            "module.ec2.aws_security_group.wp-sg",
            "module.ec2.data.aws_ami.wp",
            "module.vpc.aws_subnet.pri_sub_az2",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:security-group/sg-0ad5d5ca8938b5c0c",
            "description": "allow http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad5d5ca8938b5c0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb security groups",
            "name_prefix": "",
            "owner_id": "471112857175",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2ice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:security-group/sg-00a0f769e526d1405",
            "description": "ec2 endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a0f769e526d1405",
            "ingress": [],
            "name": "ec2ice",
            "name_prefix": "",
            "owner_id": "471112857175",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:security-group/sg-0707a257efa273803",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0707a257efa273803",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad5d5ca8938b5c0c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad5d5ca8938b5c0c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00a0f769e526d1405",
                  "sg-0187bb578c4267113"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "471112857175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "haidang-wp-sg"
            },
            "tags_all": {
              "Name": "haidang-wp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.http.my_ip",
            "module.ec2.aws_security_group.alb_security_group",
            "module.ec2.aws_security_group.ec2ice",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:security-group/sg-002700208f51220fd",
            "description": "Allow port 2049 efs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002700208f51220fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0707a257efa273803"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "sg_efs",
            "name_prefix": "",
            "owner_id": "471112857175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "haidang-sg-efs"
            },
            "tags_all": {
              "Name": "haidang-sg-efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.http.my_ip",
            "module.ec2.aws_security_group.alb_security_group",
            "module.ec2.aws_security_group.ec2ice",
            "module.ec2.aws_security_group.wp-sg",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:security-group/sg-04b228e01c9ccb327",
            "description": "Security group for Elasticache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b228e01c9ccb327",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0707a257efa273803"
                ],
                "self": false,
                "to_port": 11211
              }
            ],
            "name": "sg_elasticache",
            "name_prefix": "",
            "owner_id": "471112857175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "haidang-sg-elasticache"
            },
            "tags_all": {
              "Name": "haidang-sg-elasticache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.http.my_ip",
            "module.ec2.aws_security_group.alb_security_group",
            "module.ec2.aws_security_group.ec2ice",
            "module.ec2.aws_security_group.wp-sg",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:security-group/sg-08dc10087bd46d76b",
            "description": "Allow port 3306 My SQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dc10087bd46d76b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0707a257efa273803"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_rds",
            "name_prefix": "",
            "owner_id": "471112857175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "haidang-sg_rds"
            },
            "tags_all": {
              "Name": "haidang-sg_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.aws_security_group.sg_bastion",
            "module.asg.data.http.my_ip",
            "module.ec2.aws_security_group.alb_security_group",
            "module.ec2.aws_security_group.ec2ice",
            "module.ec2.aws_security_group.wp-sg",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb834986fc434bd0",
            "arn": "arn:aws:ec2:us-east-1:471112857175:elastic-ip/eipalloc-0cb834986fc434bd0",
            "association_id": "eipassoc-0e8c8fd71fd73cf9d",
            "domain": "vpc",
            "id": "eipalloc-0cb834986fc434bd0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b117834b3a0a0f35",
            "private_dns": "ip-10-0-0-82.ec2.internal",
            "private_ip": "10.0.0.82",
            "public_dns": "ec2-34-226-111-162.compute-1.amazonaws.com",
            "public_ip": "34.226.111.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natg gw - eip1"
            },
            "tags_all": {
              "Name": "natg gw - eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1824928eabeb309",
            "arn": "arn:aws:ec2:us-east-1:471112857175:elastic-ip/eipalloc-0e1824928eabeb309",
            "association_id": "eipassoc-00c7562774a8240ab",
            "domain": "vpc",
            "id": "eipalloc-0e1824928eabeb309",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a1f217278afc74c5",
            "private_dns": "ip-10-0-1-148.ec2.internal",
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-52-204-239-115.compute-1.amazonaws.com",
            "public_ip": "52.204.239.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natg gw - eip2"
            },
            "tags_all": {
              "Name": "natg gw - eip2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:internet-gateway/igw-06cb18c763a1ec5d4",
            "id": "igw-06cb18c763a1ec5d4",
            "owner_id": "471112857175",
            "tags": {
              "Name": "haidang - igw"
            },
            "tags_all": {
              "Name": "haidang - igw"
            },
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb834986fc434bd0",
            "association_id": "eipassoc-0e8c8fd71fd73cf9d",
            "connectivity_type": "public",
            "id": "nat-02d52bf6e0b34cf78",
            "network_interface_id": "eni-0b117834b3a0a0f35",
            "private_ip": "10.0.0.82",
            "public_ip": "34.226.111.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a322b91a94902c28",
            "tags": {
              "Name": "natgw az1 "
            },
            "tags_all": {
              "Name": "natgw az1 "
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.pub_sub_az1",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1824928eabeb309",
            "association_id": "eipassoc-00c7562774a8240ab",
            "connectivity_type": "public",
            "id": "nat-04a95698064736de5",
            "network_interface_id": "eni-0a1f217278afc74c5",
            "private_ip": "10.0.1.148",
            "public_ip": "52.204.239.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b93fcec9c89b3310",
            "tags": {
              "Name": "natgw az2 "
            },
            "tags_all": {
              "Name": "natgw az2 "
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.pub_sub_az2",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_pri_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:route-table/rtb-09e16ceced15a7ae7",
            "id": "rtb-09e16ceced15a7ae7",
            "owner_id": "471112857175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02d52bf6e0b34cf78",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private routeable az1"
            },
            "tags_all": {
              "Name": "private routeable az1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_az1",
            "module.vpc.aws_subnet.pub_sub_az1",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_pri_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:route-table/rtb-0da0edb580877c2a2",
            "id": "rtb-0da0edb580877c2a2",
            "owner_id": "471112857175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a95698064736de5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private routeable az2"
            },
            "tags_all": {
              "Name": "private routeable az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_az2",
            "module.vpc.aws_subnet.pub_sub_az2",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:route-table/rtb-012a86e5fc6bc1cb0",
            "id": "rtb-012a86e5fc6bc1cb0",
            "owner_id": "471112857175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cb18c763a1ec5d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "haidang - rtb_pub"
            },
            "tags_all": {
              "Name": "haidang - rtb_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_pri_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b31e5dae12d38c",
            "route_table_id": "rtb-09e16ceced15a7ae7",
            "subnet_id": "subnet-01ed0d48ff8864eb4"
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_az1",
            "module.vpc.aws_route_table.rtb_pri_az1",
            "module.vpc.aws_subnet.pri_sub_az1",
            "module.vpc.aws_subnet.pub_sub_az1",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_pri_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bd00434e9fbcaa8",
            "route_table_id": "rtb-0da0edb580877c2a2",
            "subnet_id": "subnet-059e3af006f9c60ac"
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_az2",
            "module.vpc.aws_route_table.rtb_pri_az2",
            "module.vpc.aws_subnet.pri_sub_az2",
            "module.vpc.aws_subnet.pub_sub_az2",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_pub_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cbcfeb7fdd42ab6",
            "route_table_id": "rtb-012a86e5fc6bc1cb0",
            "subnet_id": "subnet-0a322b91a94902c28"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb_pub",
            "module.vpc.aws_subnet.pub_sub_az1",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_pub_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6627cb9e8381800",
            "route_table_id": "rtb-012a86e5fc6bc1cb0",
            "subnet_id": "subnet-0b93fcec9c89b3310"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb_pub",
            "module.vpc.aws_subnet.pub_sub_az2",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_data_sub_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:subnet/subnet-0e19a95bd1b289236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e19a95bd1b289236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112857175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "haidang - pri_data_sub_az1"
            },
            "tags_all": {
              "Name": "haidang - pri_data_sub_az1"
            },
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_data_sub_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:subnet/subnet-0c5094ecc54d1c231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5094ecc54d1c231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112857175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "haidang - pri_data_sub_az2"
            },
            "tags_all": {
              "Name": "haidang - pri_data_sub_az2"
            },
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:subnet/subnet-01ed0d48ff8864eb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ed0d48ff8864eb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112857175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "haidang - pri_sub_az1"
            },
            "tags_all": {
              "Name": "haidang - pri_sub_az1"
            },
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:subnet/subnet-059e3af006f9c60ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059e3af006f9c60ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112857175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "haidang - pri_sub_az2"
            },
            "tags_all": {
              "Name": "haidang - pri_sub_az2"
            },
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:subnet/subnet-0a322b91a94902c28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a322b91a94902c28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112857175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "haidang - pub_sub_az1"
            },
            "tags_all": {
              "Name": "haidang - pub_sub_az1"
            },
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:subnet/subnet-0b93fcec9c89b3310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b93fcec9c89b3310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112857175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "haidang - pub_sub_az2"
            },
            "tags_all": {
              "Name": "haidang - pub_sub_az2"
            },
            "vpc_id": "vpc-0a5056cfc67050ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112857175:vpc/vpc-0a5056cfc67050ddd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0a4175e82c7935180",
            "default_route_table_id": "rtb-092d27a864e790df6",
            "default_security_group_id": "sg-01f535a248fe0d74c",
            "dhcp_options_id": "dopt-0e388fbc65585a2bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5056cfc67050ddd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092d27a864e790df6",
            "owner_id": "471112857175",
            "tags": {
              "Name": "haidang - vpc"
            },
            "tags_all": {
              "Name": "haidang - vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}